--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,9 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.7.2",
     "emailjs-com": "^3.2.0",
-    "firebase": "^10.12.2",
+    "firebase": "^11.0.1",
     "flowbite-react": "^0.10.1",
+    "i18next": "^23.16.4",
     "imagemin": "^9.0.0",
     "imagemin-mozjpeg": "^10.0.0",
     "imagemin-pngquant": "^10.0.0",
@@ -27,6 +28,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-i18next": "^15.1.0",
     "react-icons": "^4.11.0",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
